[tool.poetry]
name = "glacier"
version = "0.2.0"
description = ""
authors = ["Hiroki Konishi <relastle@gmail.com>"]
license = "MIT"
packages = [
  {include = "glacier"}
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
click-help-colors = "^0.8"
typing_extensions = { version =  "^3.7.4" }
dataclasses = { version = "^0.7", python = ">=3.6, <3.7" }
click-completion = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "==6.0.1"
flake8 = "==3.8.3"
autopep8 = "==1.5.4"
pyflakes = "==2.2.0"
coverage = "==5.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
