[tool.poetry]
name = "glacier"
version = "0.3.3"
description = ""
authors = ["Hiroki Konishi <relastle@gmail.com>"]
license = "MIT"
packages = [
  {include = "glacier"}
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
click-help-colors = "^0.8"
click-completion = "^0.5.2"
typing-extensions = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "==6.0.1"
flake8 = "==3.8.3"
autopep8 = "==1.5.4"
pyflakes = "==2.2.0"
coverage = "==5.2.1"
pyproject-flake8 = "^0.0.1-alpha.2"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.flake8]
max-line-length = 88
ignore = "E402 F541 W504"

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
strict_optional = true
no_implicit_optional = true
show_error_context = true
show_column_numbers = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_return_any = true
show_none_errors = true
warn_unused_ignores = false
